--- a/config/tsconfig.a.json
+++ b/config/tsconfig.a.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
+    "allowUnreachableCode": true, // default: undefined
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
