--- a/show-config.json
+++ b/show-config.json
@@ -2,10 +2,12 @@
     "compilerOptions": {
         "target": "es2016",
         "module": "commonjs",
+        "allowUnreachableCode": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
+        "allowUnusedLabels": true,
         "allowSyntheticDefaultImports": true,
         "noImplicitAny": true,
         "noImplicitThis": true,
